[gd_scene load_steps=2 format=2]

[ext_resource path="res://OptionsDialog.gd" type="Script" id=1]

[node name="OptionsDialog" type="WindowDialog"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -160.0
margin_top = -128.0
margin_right = 160.0
margin_bottom = 128.0
window_title = "Options"
script = ExtResource( 1 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer3" type="VBoxContainer" parent="CenterContainer"]
margin_left = 74.0
margin_top = 32.0
margin_right = 246.0
margin_bottom = 224.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer3"]
margin_right = 172.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer3/VBoxContainer"]
margin_right = 172.0
margin_bottom = 14.0
text = "Astar Options:"
uppercase = true

[node name="AvoidanceOptions" type="OptionButton" parent="CenterContainer/VBoxContainer3/VBoxContainer"]
margin_top = 18.0
margin_right = 172.0
margin_bottom = 38.0

[node name="AllowUnitTargetsCheck" type="CheckBox" parent="CenterContainer/VBoxContainer3/VBoxContainer"]
margin_top = 42.0
margin_right = 172.0
margin_bottom = 66.0
text = "Allow Unit Targets"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer3/VBoxContainer"]
margin_top = 70.0
margin_right = 172.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
margin_top = 5.0
margin_right = 94.0
margin_bottom = 19.0
text = "Max Distance: "

[node name="MaxRoutingDistance" type="SpinBox" parent="CenterContainer/VBoxContainer3/VBoxContainer/HBoxContainer"]
margin_left = 98.0
margin_right = 172.0
margin_bottom = 24.0
min_value = -1.0
value = -1.0

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer3"]
margin_top = 98.0
margin_right = 172.0
margin_bottom = 192.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer3/VBoxContainer2"]
margin_right = 172.0
margin_bottom = 14.0
text = "Flood Options:"
uppercase = true

[node name="UnitFloodingOptions" type="OptionButton" parent="CenterContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 18.0
margin_right = 172.0
margin_bottom = 38.0

[node name="SkipObstaclesCheck" type="CheckBox" parent="CenterContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 42.0
margin_right = 172.0
margin_bottom = 66.0
pressed = true
text = "Skip Ostacles"

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer3/VBoxContainer2"]
margin_top = 70.0
margin_right = 172.0
margin_bottom = 94.0

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
margin_top = 5.0
margin_right = 76.0
margin_bottom = 19.0
text = "Max Range: "

[node name="MaxRangeSpin" type="SpinBox" parent="CenterContainer/VBoxContainer3/VBoxContainer2/HBoxContainer"]
margin_left = 80.0
margin_right = 154.0
margin_bottom = 24.0
value = 3.0

[connection signal="item_selected" from="CenterContainer/VBoxContainer3/VBoxContainer/AvoidanceOptions" to="." method="_on_AvoidanceOptions_item_selected"]
[connection signal="item_selected" from="CenterContainer/VBoxContainer3/VBoxContainer2/UnitFloodingOptions" to="." method="_on_UnitFloodingOptions_item_selected"]
